@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-28T08:11:43Z",
-  "count_outdated" : 51,
-  "uniques_outdated" : 38,
+  "timestamp" : "2023-07-30T08:10:52Z",
+  "count_outdated" : 52,
+  "uniques_outdated" : 39,
   "count" : 55,
   "uniques" : 41,
   "clones" : [
-    {
-      "timestamp": "2023-07-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-19T00:00:00Z",
       "count": 1,
